# Copyright (C) 2017-2023 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

April, 07, 2023, AnnotSV version 3.3.4
	- Among the “po_P_*_*” features, redundancy is now removed ONLY from “po_P_*_phen” and “po_P_*_hpo”.
	=> AnnotSV keeps now the correspondence between “po_P_*_source”, “po_P_*_coord” and “po_P_*_percent” features.
	- Improvment of the running time (code part: SV partially overlapping with an established benign region)
	- Update of the Makefile (variantconvert install)
	- Remove requirement for ANNOTSV environment variable
	- Add of the "INSTALL_code.sh" and "INSTALL_annotations.sh" bash files (for a basic manual installation)
	- Add a check of the "#CHROM" header line
	- Add of the "-variantconvertDir" option (path of the variantconvert directory). By default, the variantconvert tool distributed by annotSV is used.

March, 30, 2023, AnnotSV version 3.3.3
	- Add bugfix for large input file

March, 28, 2023, AnnotSV version 3.3.2
	- Add bugfix for SV partially overlapping with an established benign region. Ranking Impact
	- Improve the 40 criteria (Loss) in the SV ranking
	- Restrict the number of "po_B_*_someG_*" features to 20

March, 24, 2023, AnnotSV version 3.3.1
	- Add bugfix with the use of the SVminSize option
	- Report the minimal LOEUF value (among those of all overlapped genes) in the SV full length annotation
	- Update of the variantconvert distribution (1.2.2 installed)

March, 23, 2023, AnnotSV version 3.3
	- Add bugfix regarding genomic start coordinates. TSV and VCF output files are now both 1-based, with inclusive-end (whatever the input file format)
	- Add interpretation of the square-bracketed SV breakend notations within the VCF. 